--- a/app/src/main/res/layout/activity_timed_recovery.xml
+++ b/app/src/main/res/layout/activity_timed_recovery.xml
@@ -12,43 +12,43 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="8dp"
         android:fontFamily="@font/roboto_bold"
         android:text="@string/recovery"
         android:textColor="@android:color/black"
         android:textSize="44sp"
         app:layout_constraintBottom_toTopOf="@+id/timed_recovery_icon"
         app:layout_constraintEnd_toEndOf="@+id/timed_recovery_seconds"
-        app:layout_constraintStart_toStartOf="@+id/timed_recovery_icon"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/timed_recovery_icon" />
 
     <ImageView
         android:id="@+id/timed_recovery_icon"
         android:layout_width="120dp"
         android:layout_height="104dp"
-        android:layout_marginBottom="68dp"
+        android:layout_marginBottom="12dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toTopOf="@+id/timed_recovery_coming_label"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.352"
+        app:layout_constraintHorizontal_bias="0.37"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/ic_battery" />
 
     <TextView
         android:id="@+id/timed_recovery_seconds"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
         android:fontFamily="@font/roboto_bold"
         android:text="60"
         android:textColor="@android:color/black"
-        android:textSize="55sp"
+        android:textSize="60sp"
         app:layout_constraintBottom_toBottomOf="@+id/timed_recovery_icon"
         app:layout_constraintStart_toEndOf="@+id/timed_recovery_icon"
-        app:layout_constraintTop_toBottomOf="@+id/timed_recovery_title" />
+        app:layout_constraintTop_toTopOf="@+id/timed_recovery_icon" />
 
     <TextView
         android:id="@+id/timed_recovery_coming_label"
@@ -77,7 +77,7 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout"
         android:layout_width="0dp"
-        android:layout_height="201dp"
+        android:layout_height="284dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -87,7 +87,7 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <ImageView
-            android:id="@+id/timed_recovery_image"
+            android:id="@+id/timed_recovery_next_image"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="2dp"
@@ -96,10 +96,10 @@
             android:scaleType="fitStart"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <!--TextView
-            android:id="@+id/upcoming_action_title"
+        <TextView
+            android:id="@+id/timed_recovery_next_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -107,40 +107,28 @@
             android:fontFamily="@font/roboto"
             android:textSize="22sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/upcoming_action_image" />
+            app:layout_constraintTop_toBottomOf="@+id/timed_recovery_next_image" />
 
         <ImageView
-            android:id="@+id/upcoming_action_icon"
+            android:id="@+id/timed_recovery_next_icon"
             android:layout_width="22dp"
             android:layout_height="21dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/upcoming_action_title"
+            app:layout_constraintTop_toBottomOf="@+id/timed_recovery_next_title"
             app:srcCompat="@drawable/ic_watch" />
 
         <TextView
-            android:id="@+id/upcoming_action_label"
+            android:id="@+id/timed_recovery_next_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:fontFamily="@font/roboto"
             android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="@+id/upcoming_action_icon"
-            app:layout_constraintStart_toEndOf="@+id/upcoming_action_icon"
-            app:layout_constraintTop_toTopOf="@+id/upcoming_action_icon" />
-
-        <Button
-            android:id="@+id/upcoming_action_button_show"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginTop="8dp"
-            android:text="@string/show"
-            app:layout_constraintBottom_toBottomOf="@+id/upcoming_action_label"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/upcoming_action_title" /-->
+            app:layout_constraintBottom_toBottomOf="@+id/timed_recovery_next_icon"
+            app:layout_constraintStart_toEndOf="@+id/timed_recovery_next_icon"
+            app:layout_constraintTop_toTopOf="@+id/timed_recovery_next_icon" />
 
     </android.support.constraint.ConstraintLayout>
 
