--- a/app/src/main/res/layout/activity_timed_recovery.xml
+++ b/app/src/main/res/layout/activity_timed_recovery.xml
@@ -89,11 +89,13 @@
         <ImageView
             android:id="@+id/timed_recovery_next_image"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginBottom="12dp"
             android:layout_marginEnd="2dp"
             android:layout_marginStart="2dp"
             android:layout_marginTop="2dp"
-            android:scaleType="fitStart"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toTopOf="@+id/timed_recovery_next_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -102,21 +104,21 @@
             android:id="@+id/timed_recovery_next_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
             android:fontFamily="@font/roboto"
             android:textSize="22sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/timed_recovery_next_image" />
+            app:layout_constraintBottom_toTopOf="@+id/timed_recovery_next_icon"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <ImageView
             android:id="@+id/timed_recovery_next_icon"
             android:layout_width="22dp"
             android:layout_height="21dp"
+            android:layout_marginBottom="16dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/timed_recovery_next_title"
             app:srcCompat="@drawable/ic_watch" />
 
         <TextView
@@ -129,6 +131,21 @@
             app:layout_constraintBottom_toBottomOf="@+id/timed_recovery_next_icon"
             app:layout_constraintStart_toEndOf="@+id/timed_recovery_next_icon"
             app:layout_constraintTop_toTopOf="@+id/timed_recovery_next_icon" />
+
+        <Button
+            android:id="@+id/timed_recovery_next_button_skip"
+            android:layout_width="wrap_content"
+            android:layout_height="38dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="8dp"
+            android:background="#f95f62"
+            android:onClick="onSkipButtonClick"
+            android:text="@string/skip"
+            android:textColor="#fff"
+            app:layout_constraintBottom_toBottomOf="@+id/timed_recovery_next_label"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/timed_recovery_next_title" />
 
     </android.support.constraint.ConstraintLayout>
 
