--- a/app/src/main/res/layout/content_today_ready.xml
+++ b/app/src/main/res/layout/content_today_ready.xml
@@ -1,5 +1,6 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:appConfig="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -83,5 +84,21 @@
         appConfig:layout_constraintStart_toStartOf="@+id/today_ready_progressBar"
         appConfig:layout_constraintTop_toBottomOf="@+id/today_ready_button"
         appConfig:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/today_ready_paused"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/roboto_bold"
+        android:text="TRAINING PAUSED"
+        android:textColor="#f95f62"
+        android:textSize="22sp"
+        android:visibility="invisible"
+        appConfig:layout_constraintEnd_toEndOf="parent"
+        appConfig:layout_constraintStart_toStartOf="parent"
+        appConfig:layout_constraintTop_toBottomOf="@+id/today_ready_percent" />
 
 </android.support.constraint.ConstraintLayout>
